[package]
authors = ["Xuanwo <github@xuanwo.io>"]
categories = ["command-line-utilities"]
description = "Bridge between serde types"
documentation = "https://docs.rs/serde-bridge"
repository = "https://github.com/Xuanwo/serde-bridge"
edition = "2021"
license = "Apache-2.0"
name = "serde-bridge"
version = "0.1.0"

[dependencies]
indexmap = "2.0.0"
serde = "1.0.136"
anyhow = "1.0.56"

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
